--- a/public/login.css
+++ b/public/login.css
@@ -1,7 +1,7 @@
 body {
   height: 100%;
   width: 100%;
-  background-color: white;
+  background-color: black;
 }
 
 .logo-container {
@@ -14,10 +14,13 @@ body {
 
 .form-box {
   width: 380px;
-  height: 480px;
+  height: 580px;
   position: relative;
+  display: flex;
+  flex-direction: column;
   margin: 6% auto;
   background: rgb(253 153 38);
+  overflow: hidden;
 }
 .button-box {
   width: 60%;
@@ -25,7 +28,7 @@ body {
   box-shadow: 0 0 20px 9px white;
   border-radius: 30px;
   margin: auto;
-  top: 60px;
+  top: -100px;
 }
 .toggle-btn {
   padding: 10px 30px;
@@ -49,7 +52,8 @@ body {
 }
 
 .social-icons {
-  margin: 80px;
+  margin: 100px;
+  margin-bottom: 20px;
   font-size: 30px;
   cursor: pointer;
   display: flex;
@@ -57,16 +61,16 @@ body {
 }
 
 .input-group {
-  margin-top: 150px;
+  top: 180px;
   position: absolute;
-  width: 300px;
+  width: 280px;
   transition: 0.5s;
 }
 .input-field {
-  width: 80%;
-  padding-top: 5px;
+  width: 100%;
+  padding-top: 1px;
   padding-bottom: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
   border-top: 0;
   border-right: 0;
   border-left: 0;
@@ -74,33 +78,36 @@ body {
   outline: none;
   background: transparent;
 }
+.remove-margin {
+  margin: 0;
+}
 .submit-btn {
-  width: 52%;
+  width: 85%;
   padding: 10px 30px;
   cursor: pointer;
-  display: flex;
+  display: block;
   margin: auto;
+  margin-top: 50px;
   background: black;
-  font-display: 20px;
-  color: white;
   border: 0;
   outline: none;
   border-radius: 30px;
 }
-
-.check-box {
-  margin: 10px;
-  display: flex;
+.text {
+  color: white;
+  font-display: 50px;
+  margin: auto;
 }
 
-span {
+.check-box {
+  margin: 10px 10px 10px 10px;
+  display: inline-block;
+}
+
+.line {
   color: #777;
   font-size: 12px;
-  bottom: 10px;
-  display: flex;
-  position: absolute;
-  padding-left: 40px;
-  padding-top: 20px;
+  bottom: 68px;
 }
 
 #login {
