--- a/public/homepage.css
+++ b/public/homepage.css
@@ -19,7 +19,21 @@ body {
   left: 0;
   z-index: -1;
 }
+
 .room-template button {
+  width: 40%;
+  border-radius: 15px;
+}
+.room-design {
+  background-color: rgb(253 153 38);
   width: 100%;
-  border-radius: 20px;
+  height: 100%;
+  border-radius: 10px;
+  color: black;
+  padding: 5px;
+}
+.room-header {
+  display: flex;
+  justify-content: space-between;
+  background-color: chocolate;
 }
