--- a/public/chatroom.css
+++ b/public/chatroom.css
@@ -12,17 +12,19 @@ body{
   display: inline-block;
   border-top-left-radius: 5px;
   margin-bottom: 0;
+  overflow-y:auto
 }
 
 .messages-panel {
   border: 5px solid rgb(253 153 38);
+  border-bottom: 0px;
 }
 
 .message-chat {
   width: 100%;
   overflow: hidden;
 }
-
+/* 
 .chat-body {
   width: calc(100% + 17px);
   min-height: 290px;
@@ -31,11 +33,12 @@ body{
   margin-bottom: 30px;
   padding: 30px 5px 5px 5px;
   overflow-y: scroll;
-}
+} */
 
 .message {
   position: relative;
   width: 100%;
+  padding-top: 5px;
 }
 
 .message br {
@@ -194,7 +197,8 @@ body{
 .chat-footer {
   position: relative;
   width: 100%;
-  padding: 0 80px;
+  border: 5px solid rgb(253 153 38);
+  border-top: 0px
 }
 
 .chat-footer .send-message-text {
@@ -202,7 +206,7 @@ body{
   display: block;
   width: 100%;
   min-height: 55px;
-  max-height: 75px;
+  max-height: 175px;
   background-color: #fff;
   border-radius: 5px;
   padding: 5px 95px 5px 10px;
@@ -217,7 +221,7 @@ body{
   position: absolute;
   width: 35px;
   height: 35px;
-  right: 100px;
+  right: 20px;
   top: 0;
   bottom: 0;
   margin: auto;
@@ -241,7 +245,7 @@ body{
 .chat-footer .upload-file {
   display: block;
   position: absolute;
-  right: 150px;
+  right: 80px;
   height: 30px;
   font-size: 20px;
   top: 0;
