--- a/public/edit.css
+++ b/public/edit.css
@@ -1,31 +1,38 @@
 .modalContainer {
-  background-color: rgba(216, 205, 205, 0.807);
+  display: none;
   position: fixed;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  pointer-events: none;
-  top: 0;
+  z-index: 1;
   left: 0;
-  height: 100vh;
-  width: 100vw;
-  transition: opacity 0.3 ease;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(175, 156, 156, 0.768);
 }
 .modalContainer.show {
   pointer-events: auto;
   opacity: 1;
 }
-.modalInner {
+.modalbox {
   background-color: #fff;
-
-  padding: 30px 50px;
-  border: 1px solid #888;
-  width: 80%;
+  color: black;
+  margin: 20% auto;
+  padding: 30px;
+  width: 70%;
+  position: relative;
+  box-shadow: 0 5px 8px 0 rgb(253 153 38);
 }
 
 .close {
   color: #aaaaaa;
-  float: right;
+  margin: auto;
   font-size: 28px;
   font-weight: bold;
+  background-color: rgb(253 153 38);
+  color: black;
+}
+
+.close:hover {
+  background-color: #333;
+  color: white;
 }
