--- a/public/homepage.css
+++ b/public/homepage.css
@@ -1,5 +1,10 @@
 header {
-  height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logoutArea {
+  display: flex;
 }
 body {
   background-color: black;
@@ -13,11 +18,6 @@ body {
 .chathub {
   height: 7rem;
   width: 7rem;
-  border-radius: 80%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
 }
 
 .room-template button {
@@ -39,50 +39,4 @@ body {
 }
 .fa-lock {
   font-size: 1.5rem;
-}
-
-/* Below for modal  */
-.modal {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  visibility: hidden;
-  transform: scale(1.1);
-  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
-}
-
-.modal-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 1rem 1.5rem;
-  width: 24rem;
-  border-radius: 0.5rem;
-}
-
-.close-button {
-  float: right;
-  width: 1.5rem;
-  line-height: 1.5rem;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 0.25rem;
-  background-color: lightgray;
-}
-
-.close-button:hover {
-  background-color: darkgray;
-}
-
-.show-modal {
-  opacity: 1;
-  visibility: visible;
-  transform: scale(1);
-  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
