--- a/public/login.css
+++ b/public/login.css
@@ -2,11 +2,15 @@ body {
   height: 100%;
   width: 100%;
   background-color: black;
+  opacity: 1;
+  /* background-image: linear-gradient(#000000 1.5px, transparent 1.5px),
+    linear-gradient(to right, #000000 1.5px, #f1f1f1 1.5px);
+  background-size: 30px 30px; */
 }
 
 .logo-container {
   text-align: center;
-
+  z-index: 1;
   cursor: pointer;
 }
 
@@ -138,4 +142,21 @@ body {
   font-size: 15px;
   margin-left: 10em;
   margin-top: -1.5em;
+}
+
+.flash {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: linear-gradient(0deg, transparent, rgb(253 153 38), black);
+  animation: animate 6s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: rotateX(0deg);
+  }
+  100% {
+    transform: rotateX(180deg);
+  }
 }
