--- a/public/chatroom.css
+++ b/public/chatroom.css
@@ -83,7 +83,7 @@ body{
   border-top: 11px solid transparent;
   border-left: none;
   border-bottom: 11px solid transparent;
-  border-right: 13px solid #0b222d;
+  border-right: 13px solid #5F6F94;
 }
 
 
@@ -174,7 +174,7 @@ body{
 
 .message.receiveMsg .message-body {
   background-color: #2da9e9;
-  border: 1px solid #0b222d;
+  border: 1px solid #5F6F94;
   color: #fff;
 }
 
