--- a/public/edit.css
+++ b/public/edit.css
@@ -15,15 +15,19 @@
   opacity: 1;
 }
 
-.usericon {
+/* .usericon {
   background-color: black;
   margin: 15px auto;
   width: 128px;
   height: 128px;
   border-radius: 100%;
-}
+} */
 
 .modalbox {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  margin-top: 100px;
   position: relative;
   background-color: #fff;
   color: black;
@@ -34,26 +38,25 @@
   box-shadow: 0 5px 8px 0 rgb(253 153 38);
   text-align: center;
 }
-.p {
-  font-size: 60px;
-}
 
-.submitButton {
+/* .submitButton {
   display: flex;
   justify-content: space-around;
-  bottom: 10px;
-}
+} */
+
 .heart {
   font-size: 30px;
   color: red;
 }
+
 .btn {
-  color: #aaaaaa;
-  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
   font-size: 28px;
   font-weight: bold;
   background-color: rgb(253 153 38);
   color: black;
+  text-align: center;
 }
 
 .btn:hover {
