--- a/public/edit.css
+++ b/public/edit.css
@@ -1,3 +1,20 @@
+.profile-pic {
+  position: absolute;
+  height: 120px;
+  width: 120px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 0px;
+  z-index: 1001;
+  padding: 10px;
+}
+.profile-pic img {
+  border-radius: 50%;
+  box-shadow: 0px 0px 5px 0px #c1c1c1;
+  cursor: pointer;
+  width: 100px;
+  height: 100px;
+}
 .modalContainer {
   display: flex;
   position: fixed;
@@ -15,24 +32,17 @@
   opacity: 1;
 }
 
-/* .usericon {
-  background-color: black;
-  margin: 15px auto;
-  width: 128px;
-  height: 128px;
-  border-radius: 100%;
-} */
-
 .modalbox {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
-  margin-top: 100px;
   position: relative;
+  padding-inline: 10rem;
+  padding-top: 10rem;
   background-color: #fff;
   color: black;
   border-radius: 25px 25px 25px 25px;
-  margin: 10rem auto;
+  margin: auto;
   width: 40rem;
   height: 50rem;
   box-shadow: 0 5px 8px 0 rgb(253 153 38);
@@ -52,10 +62,13 @@
 .btn {
   display: flex;
   flex-direction: column;
+  margin: auto;
+  padding: auto;
   font-size: 28px;
   font-weight: bold;
   background-color: rgb(253 153 38);
   color: black;
+  width: 8rem;
   text-align: center;
 }
 
