--- a/public/edit.css
+++ b/public/edit.css
@@ -49,6 +49,10 @@
   text-align: center;
 }
 
+#photo {
+  height: 100%;
+  width: 100%;
+}
 /* .submitButton {
   display: flex;
   justify-content: space-around;
