--- a/public/edit.css
+++ b/public/edit.css
@@ -1,38 +1,6 @@
-.profile-pic {
-  position: absolute;
-  height: 120px;
-  width: 120px;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 0px;
-  z-index: 1001;
-  padding: 10px;
-}
-.profile-pic img {
-  border-radius: 50%;
-  box-shadow: 0px 0px 5px 0px #c1c1c1;
-  cursor: pointer;
-  width: 100px;
-  height: 100px;
-}
-.modalContainer {
-  display: flex;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  overflow: auto;
-  background-color: rgba(175, 156, 156, 0.768);
-}
-
-.modalContainer.show {
-  pointer-events: auto;
-  opacity: 1;
-}
-
-.modalbox {
+.box {
+  width: 40rem;
+  height: 50rem;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
@@ -43,15 +11,31 @@
   color: black;
   border-radius: 25px 25px 25px 25px;
   margin: auto;
-  width: 40rem;
-  height: 50rem;
-  box-shadow: 0 5px 8px 0 rgb(253 153 38);
+
   text-align: center;
+}
+.profile-pic {
+  position: absolute;
+  height: 120px;
+  width: 120px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 0px;
+  z-index: 1001;
+  padding: 10px;
+  border-radius: 50%;
+}
+.profile-pic img {
+  border-radius: 50%;
+  box-shadow: 0px 0px 5px 0px #c1c1c1;
+  width: 100px;
+  height: 100px;
 }
 
 #photo {
   height: 100%;
   width: 100%;
+  object-fit: cover;
 }
 /* .submitButton {
   display: flex;
@@ -68,11 +52,11 @@
   flex-direction: column;
   margin: auto;
   padding: auto;
-  font-size: 28px;
+  font-size: 10px;
   font-weight: bold;
   background-color: rgb(253 153 38);
   color: black;
-  width: 8rem;
+  width: 5rem;
   text-align: center;
 }
 
