--- a/public/edit.css
+++ b/public/edit.css
@@ -1,29 +1,26 @@
-.box {
-  width: 40rem;
-  height: 50rem;
+.select {
   display: flex;
   justify-content: space-around;
-  flex-direction: column;
-  position: relative;
-  padding-inline: 10rem;
-  /* padding-top: 5rem; */
-  background-color: #fff;
-  color: black;
-
-  text-align: center;
+  border-radius: 50%;
+}
+.form {
+  height: 300px;
+  margin: 80px;
 }
 .profile-pic {
-  position: absolute;
   height: 120px;
   width: 120px;
   left: 50%;
-  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  /* transform: translateX(-50%); */
   top: 0px;
   padding: 10px;
   border-radius: 50%;
 }
 .profile-pic img {
   border-radius: 50%;
+  justify-content: center;
   box-shadow: 0px 0px 5px 0px #c1c1c1;
   width: 100px;
   height: 100px;
@@ -33,33 +30,6 @@
   height: 100%;
   width: 100%;
   object-fit: cover;
-}
-/* .submitButton {
-  display: flex;
-  justify-content: space-around;
-} */
-
-.heart {
-  font-size: 30px;
-  color: red;
-}
-
-.btn {
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  padding: auto;
-  font-size: 10px;
-  font-weight: bold;
-  background-color: rgb(253 153 38);
-  color: black;
-  width: 5rem;
-  text-align: center;
-}
-
-.btn:hover {
-  background-color: #333;
-  color: white;
 }
 
 #editBtn {
