--- a/frontend/createRoom.css
+++ b/frontend/createRoom.css
@@ -1,8 +1,9 @@
 html {
   background-color: black;
 }
+
 body {
-  min-height: 100vh;
+  min-height: 300px;
   max-width: 400px;
   background-color: black;
   border: solid orange;
@@ -10,4 +11,20 @@ body {
   color: white;
   font-weight: bold;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  text-align: center;
+}
+label {
+  position: relative;
+  text-align: center;
+}
+
+input {
+  position: relative;
+  text-align: center;
 }
