--- a/frontend/createRoom.css
+++ b/frontend/createRoom.css
@@ -7,7 +7,7 @@ body {
   max-width: 400px;
   background-color: black;
   border: solid orange;
-  margin: 0 auto;
+  margin: 100px auto;
   color: white;
   font-weight: bold;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -18,13 +18,24 @@ form {
   flex-direction: column;
   position: relative;
   text-align: center;
+  margin-top: 50px;
 }
 label {
   position: relative;
   text-align: center;
+  margin: auto;
+  margin: 10px 10px 10px 10px;
 }
 
 input {
   position: relative;
   text-align: center;
+  margin: auto;
+  margin: auto;
+}
+
+button {
+  position: relative;
+  text-align: center;
+  margin: auto;
 }
